Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,26 +1,26 @@
 {
-  "store_id": 51517,
-  "name": "ouroinfantil",
   "domain": "ouroinfantil.netlify.app",
-  "short_name": "ouroinfantil",
-  "description": "ouroinfantil",
-  "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
+  "currency_symbol": "R$",
+  "primary_color": "#4f4f4f",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
-  "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "bg_color": "#ffffff",
+  "repository": "ecomplus-stores/ouroinfantil",
+  "logo": "/img/uploads/logo_158577410831396.png",
+  "name": "ouroinfantil",
+  "short_name": "ouroinfantil",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
+  "mini_logo": "",
+  "font_family": "_",
+  "favicon": "/img/uploads/rectangle-158.svg",
+  "icons_font": "font-awesome",
   "country_code": "BR",
-  "repository": "ecomplus-stores/ouroinfantil",
-  "icons_font": "_",
-  "font_family": "_"
+  "secondary_color": "#52948e",
+  "icon": "/img/uploads/rectangle-158.svg",
+  "store_id": 51517,
+  "description": "ouroinfantil",
+  "large_icon": "/img/uploads/rectangle-158.svg"
 }
