--- a/content/settings.json
+++ b/content/settings.json
@@ -18,7 +18,7 @@
   "favicon": "/img/uploads/rectangle-158.svg",
   "icons_font": "font-awesome",
   "country_code": "BR",
-  "secondary_color": "#52948e",
+  "secondary_color": "#00968f",
   "icon": "/img/uploads/rectangle-158.svg",
   "store_id": 51517,
   "description": "ouroinfantil",
