--- a/content/settings.json
+++ b/content/settings.json
@@ -9,8 +9,8 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/ouroinfantil",
   "logo": "/img/uploads/logo_158577410831396.png",
-  "name": "ouroinfantil",
-  "short_name": "ouroinfantil",
+  "name": "Ouro Infantil",
+  "short_name": "Ouro Infantil",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
@@ -21,6 +21,6 @@
   "secondary_color": "#00968f",
   "icon": "/img/uploads/rectangle-158.svg",
   "store_id": 51517,
-  "description": "ouroinfantil",
+  "description": "A Ouro Infantil realiza seu sonho de presentear o público infantil com joias exclusivas em ouro 18k. Entrega para todo o Brasil.",
   "large_icon": "/img/uploads/rectangle-158.svg"
 }
