--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "ouroinfantil.netlify.app",
+  "domain": "ouroinfantil.com.br",
   "currency_symbol": "R$",
   "primary_color": "#4f4f4f",
   "theme": {
